@@ -1,19 +1,30 @@
 package com.alphatica.alis.condition;
 
+import com.alphatica.alis.data.layer.Layer;
 import com.alphatica.alis.data.time.TimeMarketData;
 import com.alphatica.alis.data.time.TimeMarketDataSet;
 import com.alphatica.alis.indicators.BarsSinceLowestClose;
 
 public class LowestClose implements Condition {
-	private final BarsSinceLowestClose barsSinceLowestClose;
+	private final int length;
 
 	public LowestClose(int length) {
-		this.barsSinceLowestClose = new BarsSinceLowestClose(length);
+		this.length = length;
 	}
 
 	@Override
 	public boolean matches(TimeMarketData marketData, TimeMarketDataSet allData) {
-		return barsSinceLowestClose.calculate(marketData) == 0.0;
+		var closes = marketData.getLayer(Layer.CLOSE);
+		if (closes.size() <= length) {
+			return false;
+		}
+		var last = closes.get(0);
+		for(int i = 1; i < length; i++) {
+			if (closes.get(i) <= last) {
+				return false;
+			}
+		}
+		return true;
 	}
 
 }
